css/schedule.css
/* ... */
/*  Programs continuing  */
#kompassi_schedule:not([data-display="timeline"]) article.continues {
	order: 3;
}
#kompassi_schedule[data-display="timeline"].now article.continues {
/*	opacity: 0.5; */
/*	background-image: linear-gradient( to bottom, hsl(0,0%,60%), hsl(0,0%,75%) ); */
}

#kompassi_schedule:not([data-display="timeline"]) #kompassi_programs_continuing {
	order: 2;
}
	#kompassi_schedule[data-display="timeline"] #kompassi_programs_continuing {
		display: none;
	}

/*  Display Style: List  */
#kompassi_schedule[data-display="list"] {
	--kompassi-program-list-padding: 0.3em;
	--kompassi-program-list-visual-width: 12px;

	/* display: grid; */
	grid-template-columns: repeat(1,1fr);
	grid-gap: var(--kompassi-padding);
}
	#kompassi_schedule[data-display="list"] article {
		position: relative;
		padding-left: calc( var(--kompassi-program-list-visual-width) );
		color: var(--kompassi-fg);
		background-color: var(--kompassi-bg);
		box-shadow: var(--kompassi-box-shadow);
		border-radius: var(--kompassi-radius);
		margin-bottom: var(--kompassi-padding);
	}
		#kompassi_schedule[data-display="list"] article::before {
			content: '';
			position: absolute;
			display: block;
			width: var(--kompassi-program-list-visual-width);
			top: 0;
			bottom: 0;
			left: 0;
			background-color: var(--kompassi-program-color, var(--kompassi-program-color-default));
			background-size: calc( 100% - 2.5em ) auto;
			background-position: 50% 0.5em; /* TODO: Why is this the correct value? */
			border-top-left-radius: var(--kompassi-radius);
			border-bottom-left-radius: var(--kompassi-radius);
		}
		#kompassi_schedule[data-display="list"] article summary {
			display: grid;
			grid-template-columns: 1fr min-content;
			grid-template-areas: "title actions" "secondary secondary";
			padding: var(--kompassi-padding);
		}
			#kompassi_schedule[data-display="list"] article summary .favorite::before {
				margin-right: 0;
			}
			#kompassi_schedule[data-display="list"] article summary .secondary {
			}
		#kompassi_schedule[data-display="list"] article section {
			border-top: 1px solid var(--kompassi-fg-10);
		}
			#kompassi_schedule[data-display="list"] article section > * {
				padding: 0 var(--kompassi-padding);
				margin-bottom: var(--kompassi-padding);
			}
				#kompassi_schedule[data-display="list"] article section .main {
					padding: var(--kompassi-padding);
				}
		#kompassi_schedule[data-display="list"] article section .meta:has(+ .actions) {
			margin-bottom: 0;
		}
		#kompassi_schedule[data-display="list"] article section .actions > a::before {
			content: unset;
		}
		#kompassi_schedule[data-display="list"] article section .actions > a::after {
			content: attr(title);
		}
		#kompassi_schedule[data-display="list"] article section .meta .in-summary {
			display: none;
		}

/*  Show icon  */
/*  TODO: Prefer container query  */
@media screen and (min-width:600px) {
	#kompassi_schedule[data-display="list"] {
		display: grid;
		--kompassi-program-list-padding: 0.6em;
		--kompassi-program-list-visual-width: 5.5em;
	}
	#kompassi_schedule[data-display="list"] article {
		padding-left: var(--kompassi-program-list-visual-width);
		margin-bottom: 0;
		grid-template-columns: 50% auto auto;
		grid-template-areas:
			"title title actions"
			"meta meta meta";
	}
}

/*  TODO: Prefer container query  */
@media screen and (min-width:640px) {
	#kompassi_schedule[data-display="list"] article summary .secondary {
		display: flex;
		justify-content: space-between;
	}
		#kompassi_schedule[data-display="list"] article summary .secondary > :last-child {
			text-align: right;
		}
}

/*  Display Style: Timeline  */
#kompassi_schedule[data-display="timeline"] {
	position: relative;
	color: var(--kompassi-fg);
	background-color: var(--kompassi-bg);
	overflow: hidden;
	box-shadow: var(--kompassi-box-shadow);
	border-radius: var(--kompassi-radius);
}
	#kompassi_schedule[data-display="timeline"] .headers {
		position: absolute;
		top: 0;
		width: 100%;
		height: calc(var(--kompassi-schedule-timeline-row-height) * 2);
		background-color: var(--kompassi-bg);
	}
		#kompassi_schedule[data-display="timeline"] .headers .hint {
			position: absolute;
			padding: var(--kompassi-schedule-timeline-row-padding);
			background-color: var(--kompassi-bg);
			overflow: hidden;
		}
			#kompassi_schedule[data-display="timeline"] .headers .day_hint {
				width: 100%;
			}
			#kompassi_schedule[data-display="timeline"] .headers .time_hint {
				top: var(--kompassi-schedule-timeline-row-height);
			}
				#kompassi_schedule[data-display="timeline"] .headers.sticky .time_hint {
					border-left: 1px solid var(--kompassi-fg-10);
					border-top: 1px solid var(--kompassi-fg-10);
				}
		#kompassi_schedule[data-display="timeline"] .headers.sticky {
			z-index: 10;
			box-shadow: var(--kompassi-box-shadow);
		}
	#kompassi_schedule[data-display="timeline"] .ruler {
		width: auto;
		height: 100%;
		border-top: 1px solid var(--kompassi-fg-10);
		border-left: 1px solid var(--kompassi-fg-10);
		padding: 3px;
		color: var(--kompassi-schedule-fg-50);
		position: absolute;
		top: 0;
		bottom: 0;
	}
		#kompassi_schedule[data-display="timeline"] .ruler:first-of-type {
			border-left-color: transparent;
		}
	#kompassi_schedule[data-display="timeline"] :is(.group-name,article) {
		padding: var(--kompassi-schedule-timeline-row-padding);
		position: absolute;
	}
		#kompassi_schedule[data-display="timeline"] .group-name {
			display: block;
			color: var(--kompassi-fg);
			background-color: var(--kompassi-palette-4);
			border-radius: var(--kompassi-radius);
			position: absolute;
			left: 3px;
			right: 3px;
			z-index: 3;
			margin: 0;
		}
/* ... */

